CFF subset: fix subsetting of Euro glyph

https://bugs.freedesktop.org/show_bug.cgi?id=31878